# debianutils-translation

./: .gitignore  Makefile.am  acinclude.m4  add-shell  add-shell.8  configure.ac  installkernel  installkernel.8  ischroot.1  ischroot.c  mkboot  mkboot.8  mktemp.1  mktemp.c  readlink.1  readlink.c  remove-shell.8  run-parts.8  run-parts.c  savelog  savelog.8  sensible-browser  sensible-editor  sensible-editor.1  tempfile.1  tempfile.c  which  which.1
debian/: README.shells  changelog  control  copyright  mime  postinst  postrm  preinst  prerm  rules  shells
fr/: Makefile.am  savelog.8  which.1
po4a/: Makefile.am  po4a.conf
po4a/de/: Makefile.am
po4a/es/: Makefile.am
po4a/fr/: Makefile.am  add-shell.8  installkernel.8  mkboot.8  readlink.1  remove-shell.8  run-parts.8  savelog.8  savelog.8.fr.add  sensible-editor.1  tempfile.1  translator_french.add  which.1  which.1.fr.add
po4a/ja/: translator_japanese.add
po4a/po/: de.po  debianutils.pot  es.po  fr.po  ja.po  sl.po
po4a/sl/: Makefile.am  translator_slovene.add
