AUTOMAKE_OPTIONS = foreign

SUBDIRS = fr

bin_PROGRAMS = mktemp run-parts tempfile
mktemp_SOURCES = mktemp.c
run_parts_SOURCES = run-parts.c
tempfile_SOURCES = tempfile.c

bin_SCRIPTS = which savelog sensible-browser sensible-editor \
	      sensible-pager

sbin_SCRIPTS = installkernel mkboot

man_MANS = mktemp.1 run-parts.8 tempfile.1 \
	   installkernel.8 mkboot.8 savelog.8 sensible-editor.1 \
	   tempfile.1 which.1
