AUTOMAKE_OPTIONS = foreign

SUBDIRS = po4a

bin_PROGRAMS = run-parts tempfile
run_parts_SOURCES = run-parts.c
tempfile_SOURCES = tempfile.c

bin_SCRIPTS = which savelog sensible-browser sensible-editor \
	      sensible-pager

sbin_SCRIPTS = installkernel add-shell remove-shell

man_MANS = run-parts.8 tempfile.1 \
	   installkernel.8 savelog.8 sensible-editor.1 \
	   tempfile.1 which.1 add-shell.8 remove-shell.8
