AUTOMAKE_OPTIONS = foreign

SUBDIRS = po4a

bin_PROGRAMS = run-parts tempfile ischroot
run_parts_SOURCES = run-parts.c
tempfile_SOURCES = tempfile.c
ischroot_SOURCES = ischroot.c

bin_SCRIPTS = which savelog

sbin_SCRIPTS = installkernel add-shell remove-shell

man_MANS = run-parts.8 \
	   installkernel.8 savelog.8 \
	   tempfile.1 which.1 add-shell.8 \
	   remove-shell.8 ischroot.1
